fixed color, fonts ,alignment

--- a/src/header.css
+++ b/src/header.css
@@ -15,7 +15,7 @@
     background-image: url(./images/logo.png);
     background-size: contain;
     width: 234px;
-    height: 93px;
+    height: 91px;
     margin-left: 47px;
 }
 
